Added swagger. Implement several methods in SNMPManagerServices. Implement methods in RSUController

--- a/Manager/SNMPManager.Persistence/SNMPManager.Persistence.csproj
+++ b/Manager/SNMPManager.Persistence/SNMPManager.Persistence.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SNMPManager.Core\SNMPManager.Core.csproj" />
+    <ProjectReference Include="..\SNMPManager.Infrastructure\SNMPManager.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
