Created SNMPController and BaseController for all the Controllers. Implemented some SNMPManagerService functionality.

--- a/Manager/SNMPManager.Core/SNMPManager.Core.csproj
+++ b/Manager/SNMPManager.Core/SNMPManager.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Lextm.SharpSnmpLib" Version="11.1.0" />
+  </ItemGroup>
+
 </Project>
