--- a/Manager/SNMPManager.Infrastructure/SNMPManager.Infrastructure.csproj
+++ b/Manager/SNMPManager.Infrastructure/SNMPManager.Infrastructure.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Lextm.SharpSnmpLib" Version="11.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SNMPManager.Core\SNMPManager.Core.csproj" />
   </ItemGroup>
 
