--- a/Manager/SNMPManager.Infrastructure/SNMPManager.Infrastructure.csproj
+++ b/Manager/SNMPManager.Infrastructure/SNMPManager.Infrastructure.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Lextm.SharpSnmpLib" Version="11.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
