--- a/Manager/SNMPManager.WebAPI/SNMPManager.WebAPI.csproj
+++ b/Manager/SNMPManager.WebAPI/SNMPManager.WebAPI.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Database\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
