--- a/Dashboard/DashboardWebApp/DashboardWebApp.csproj
+++ b/Dashboard/DashboardWebApp/DashboardWebApp.csproj
@@ -10,10 +10,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.0" />
   </ItemGroup>
 
 
   <ItemGroup>
+    <ProjectReference Include="..\..\DTO\DTO.csproj" />
     <ProjectReference Include="..\DashboardWebApp.Models\DashboardWebApp.Models.csproj" />
   </ItemGroup>
 
