--- a/Dashboard/DashboardWebApp/appsettings.json
+++ b/Dashboard/DashboardWebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-DashboardWebApp-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DashboardDatabase": "Host=localhost;Database=dashboard;Username=postgres;Password=snmppass"
   },
   "Logging": {
     "LogLevel": {
