--- a/Manager/SNMPManager.WebAPI/SNMPManager.WebAPI.csproj
+++ b/Manager/SNMPManager.WebAPI/SNMPManager.WebAPI.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\DTO\DTO.csproj" />
     <ProjectReference Include="..\SNMPManager.Core\SNMPManager.Core.csproj">
       <Aliases></Aliases>
     </ProjectReference>
