--- a/Dashboard/DashboardWebApp.Models/DashboardWebApp.Models.csproj
+++ b/Dashboard/DashboardWebApp.Models/DashboardWebApp.Models.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\DTO\DTO.csproj" />
+  </ItemGroup>
+
 </Project>
