--- a/Manager/SNMPManager.WebAPI/appsettings.json
+++ b/Manager/SNMPManager.WebAPI/appsettings.json
@@ -7,5 +7,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TrapListener": {
+    "IP": "127.0.0.1",
+    "Port": 162
+  } 
 }
