Customized Identity pages. Added Manager User to handle web api request with those. Added Manager and Trap log pages

--- a/Dashboard/DashboardWebApp/DashboardWebApp.csproj
+++ b/Dashboard/DashboardWebApp/DashboardWebApp.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\DTO\DTO.csproj" />
+    <ProjectReference Include="..\..\Manager\SNMPManager.Core\SNMPManager.Core.csproj" />
     <ProjectReference Include="..\DashboardWebApp.Models\DashboardWebApp.Models.csproj" />
   </ItemGroup>
 
