--- a/Manager/SNMPManager.WebAPI/appsettings.json
+++ b/Manager/SNMPManager.WebAPI/appsettings.json
@@ -11,5 +11,11 @@
   "TrapListener": {
     "IP": "127.0.0.1",
     "Port": 162
-  } 
+  },
+  "DefaultAdmin": {
+    "UserName": "admin",
+    "Token": "Adminpass01",
+    "SNMPv3Auth": "authpass012",
+    "SNMPv3Priv": "privpass012"
+  }
 }
