--- a/Dashboard/DashboardWebApp.Models/DashboardWebApp.Models.csproj
+++ b/Dashboard/DashboardWebApp.Models/DashboardWebApp.Models.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\DTO\DTO.csproj" />
+    <ProjectReference Include="..\..\Common\DTO\DTO.csproj" />
   </ItemGroup>
 
 </Project>
