--- a/Dashboard/DashboardWebApp/DashboardWebApp.csproj
+++ b/Dashboard/DashboardWebApp/DashboardWebApp.csproj
@@ -16,7 +16,7 @@
 
 
   <ItemGroup>
-    <ProjectReference Include="..\..\DTO\DTO.csproj" />
+    <ProjectReference Include="..\..\Common\DTO\DTO.csproj" />
     <ProjectReference Include="..\..\Manager\SNMPManager.Core\SNMPManager.Core.csproj" />
     <ProjectReference Include="..\DashboardWebApp.Models\DashboardWebApp.Models.csproj" />
   </ItemGroup>
