changed docker support to proper docker-compose

--- a/Manager/SNMPManager.WebAPI/Dockerfile
+++ b/Manager/SNMPManager.WebAPI/Dockerfile
@@ -5,18 +5,18 @@ EXPOSE 443
 
 FROM microsoft/dotnet:2.2-sdk AS build
 WORKDIR /src
-COPY ["Manager/SNMPManager.WebAPI/SNMPManager.WebAPI.csproj", "Manager/SNMPManager.WebAPI/"]
-COPY ["Manager/SNMPManager.Core/SNMPManager.Core.csproj", "Manager/SNMPManager.Core/"]
-COPY ["Common/DTO/DTO.csproj", "Common/DTO/"]
-COPY ["Manager/SNMPManager.Persistence/SNMPManager.Persistence.csproj", "Manager/SNMPManager.Persistence/"]
-COPY ["Manager/SNMPManager.Infrastructure/SNMPManager.Infrastructure.csproj", "Manager/SNMPManager.Infrastructure/"]
-RUN dotnet restore "Manager/SNMPManager.WebAPI/SNMPManager.WebAPI.csproj"
+COPY Manager/SNMPManager.WebAPI/SNMPManager.WebAPI.csproj Manager/SNMPManager.WebAPI/
+COPY Manager/SNMPManager.Core/SNMPManager.Core.csproj Manager/SNMPManager.Core/
+COPY Common/DTO/DTO.csproj Common/DTO/
+COPY Manager/SNMPManager.Persistence/SNMPManager.Persistence.csproj Manager/SNMPManager.Persistence/
+COPY Manager/SNMPManager.Infrastructure/SNMPManager.Infrastructure.csproj Manager/SNMPManager.Infrastructure/
+RUN dotnet restore Manager/SNMPManager.WebAPI/SNMPManager.WebAPI.csproj
 COPY . .
-WORKDIR "/src/Manager/SNMPManager.WebAPI"
-RUN dotnet build "SNMPManager.WebAPI.csproj" -c Release -o /app
+WORKDIR /src/Manager/SNMPManager.WebAPI
+RUN dotnet build SNMPManager.WebAPI.csproj -c Release -o /app
 
 FROM build AS publish
-RUN dotnet publish "SNMPManager.WebAPI.csproj" -c Release -o /app
+RUN dotnet publish SNMPManager.WebAPI.csproj -c Release -o /app
 
 FROM base AS final
 WORKDIR /app
