--- a/Manager/SNMPManager.WebAPI/appsettings.json
+++ b/Manager/SNMPManager.WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ManagerDatabase": "Host=176.63.30.89;Database=postgres;Username=postgres;Password=snmppass"
+    "ManagerDatabase": "Host=localhost;Database=postgres;Username=postgres;Password=snmppass"
   },
   "Logging": {
     "LogLevel": {
