--- a/Manager/SNMPManager.WebAPI/SNMPManager.WebAPI.csproj
+++ b/Manager/SNMPManager.WebAPI/SNMPManager.WebAPI.csproj
@@ -5,6 +5,7 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <UserSecretsId>0069a69c-7d01-4179-ae8f-d0854a2fc788</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
