fixed postgre docker image config and added migration to startup

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -16,6 +16,6 @@ services:
 
   postgresdb:
     environment:
-      POSTGERS_USER: admin
+      POSTGRES_USER: admin
       POSTGRES_PASSWORD: snmppass
       POSTGRES_DB: webapi
