--- a/Manager/SNMPManager.WebAPI/Dockerfile
+++ b/Manager/SNMPManager.WebAPI/Dockerfile
@@ -18,7 +18,11 @@ RUN dotnet build SNMPManager.WebAPI.csproj -c Release -o /app
 FROM build AS publish
 RUN dotnet publish SNMPManager.WebAPI.csproj -c Release -o /app
 
+#RUN dotnet ef migrations script -o migration.sql --idempotent
+#COPY migration.sql /app
+
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
+
 ENTRYPOINT ["dotnet", "SNMPManager.WebAPI.dll"]
