--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,6 +7,8 @@ services:
       ASPNETCORE_URLS: https://+:443;http://+:80
       ASPNETCORE_HTTPS_PORT: 44387
       DB: "Host=postgresdb;Database=webapi;Username=admin;Password=snmppass"
+      ASPNETCORE_Kestrel__Certificates__Default__Path: "/root/.aspnet/https/aspnetapp.pfx"
+      ASPNETCORE_Kestrel__Certificates__Default__Password: crtpass
     ports:
       - "51467:80"
       - "44387:443"
@@ -15,6 +17,8 @@ services:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
 
   postgresdb:
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: snmppass
