--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,18 @@ services:
   postgresdb:
     image: postgres
     restart: always
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: snmppass
+      POSTGRES_DB: webapi
     networks:
       - webapi_network
 
   snmpmanager.webapi:
     image: ${DOCKER_REGISTRY-}snmpmanagerwebapi
+    command: "dotnet ef database update"
     build:
       context: .
       dockerfile: Manager/SNMPManager.WebAPI/Dockerfile
@@ -16,6 +23,19 @@ services:
       - "postgresdb"
     networks:
       - webapi_network
+    environment:
+      ASPNETCORE_ENVIRONMENT: Development
+      ASPNETCORE_URLS: https://+:443;http://+:80
+      ASPNETCORE_HTTPS_PORT: 44387
+      DB: "Host=postgresdb;Database=webapi;Username=admin;Password=snmppass"
+      ASPNETCORE_Kestrel__Certificates__Default__Path: "/root/.aspnet/https/aspnetapp.pfx"
+      ASPNETCORE_Kestrel__Certificates__Default__Password: crtpass
+    ports:
+      - "51467:80"
+      - "44387:443"
+    volumes:
+      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
 
 
 networks:
