Fixed activeted rsu update issue. Parameterized RSUHealthChecker

--- a/Manager/SNMPManager.WebAPI/appsettings.json
+++ b/Manager/SNMPManager.WebAPI/appsettings.json
@@ -17,5 +17,9 @@
     "Token": "Adminpass01",
     "SNMPv3Auth": "authpass012",
     "SNMPv3Priv": "privpass012"
-  }
+  },
+  "RSUHealthChecker": {
+    "Period": 5,
+    "HealthTreshold" :  1
+  } 
 }
