Add database update  command to dockerfile

--- a/Manager/SNMPManager.WebAPI/Dockerfile
+++ b/Manager/SNMPManager.WebAPI/Dockerfile
@@ -22,4 +22,6 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
 
+RUN dotnet ef database update
+
 ENTRYPOINT ["dotnet", "SNMPManager.WebAPI.dll"]
